tests/pos/bigint.scala
import scala.math.BigInt
//import BigInt._
object test {

  1 * BigInt(0)

}
